--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <h1> Chrismess</h1>
-
+  
+    <button>Say yeah</button>
     <script src="index.js"></script>   
 </body>
 </html>
