Added HW in ReadMe

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1> Chrismess</h1>
   
-    <button>Say yeah</button>
+    <button>Change Heading</button>
     <script src="index.js"></script>   
 </body>
 </html>
