Updated with Bonus Credit [Multiple Headings && id used to edit 2nd]

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <h1> Chrismess</h1>
-  
+    <h1 id="MEN"> Chris Pratt, Chris Hemsworth, Chris Evans!!</h1>
+    <h1> TOO MANY CHRISES!</h1>
+
     <button>Change Heading</button>
     <script src="index.js"></script>   
 </body>
