--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
     <h1> Chrismess</h1>
     <h1 id="MEN"> Chris Pratt, Chris Hemsworth, Chris Evans!!</h1>
     <h1> TOO MANY CHRISES!</h1>
-
-    <button>Change Heading</button>
+    <form id='faveForm'>
+            Who Is Your Fave Chris???<br>
+            <input type="text" name="faveChris"><br>
+    </form>
+    <button id="faveButton">Let Us Know</button>
+    <br>
+    <button id="firstButton">Change Heading</button>
     <script src="index.js"></script>   
 </body>
 </html>
