Hyper Fighting [Added Keyboard Listner that does the click goodness]

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1> Chrismess</h1>
     <h1 id="MEN"> Chris Pratt, Chris Hemsworth, Chris Evans!!</h1>
     <h1> TOO MANY CHRISES!</h1>
-    <form id='faveForm'>
+    <form id="faveForm">
             Who Is Your Fave Chris???<br>
             <input type="text" name="faveChris"><br>
     </form>
