Hyper Fighting [I realized I wasn't using the submit attribute of the form. I changed my code to make it work with the submit form]

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <h1> TOO MANY CHRISES!</h1>
     <form id="faveForm">
             Who Is Your Fave Chris???<br>
-            <input type="text" name="faveChris"><br>
+            <input type="text" id="faveChris" name="faveChris"><br>
+            <input type="submit" id="faveButton" value="Let Us Know">
     </form>
-    <button id="faveButton">Let Us Know</button>
+   
     <br>
     <button id="firstButton">Change Heading</button>
     <script src="index.js"></script>   
