Made it work using the submit button as opposed to the submit type input

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <form id="faveForm">
             Who Is Your Fave Chris???<br>
             <input type="text" id="faveChris" name="faveChris"><br>
-            <input type="submit" id="faveButton" value="Let Us Know">
+            <button type="submit">Update Heading</button>
     </form>
    
     <br>
