--- a/index.html
+++ b/index.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Chris Mess A Whole Mess o' Chrises </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
-  
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Chrismess - A whole mess o' Chrisses</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
 </head>
 <body>
-    <h1> Chrismess</h1>
-    <h1 id="MEN"> Chris Pratt, Chris Hemsworth, Chris Evans!!</h1>
-    <h1> TOO MANY CHRISES!</h1>
-    <form id="faveForm">
-            Who Is Your Fave Chris???<br>
-            <input type="text" id="faveChris" name="faveChris"><br>
-            <button type="submit">Update Heading</button>
-    </form>
-   
-    <br>
-    <button id="firstButton">Change Heading</button>
-    <script src="index.js"></script>   
+  <h1>Chrismess</h1>
+
+  <form id="flickForm">
+    <input type="text" name="flickName">
+    <button type="submit">Update Heading</button>
+  </form>
+
+  <div id="flicks"></div>
+
+  <script src="index.js"></script>
 </body>
 </html>
