Chage the div to an unordered list

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
   <h1>Chrismess</h1>
 
   <form id="flickForm">
+      <label for="flickName">Flick Name</label>
     <input type="text" name="flickName" autofocus>
     <button type="submit">Update Heading</button>
   </form>
 
-  <div id="flicks"></div>
+  <ul id="flicks"></ul>
 
   <script src="index.js"></script>
 </body>
