Add secondary Field in Form
Update Function Name

--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
   <form id="flickForm">
       <label for="flickName">Flick Name</label>
     <input type="text" name="flickName" autofocus>
+  
+    <br>
+    <br>
+    <label for="ChrisCount">Chris Count</label>
+    <input type="text" name="ChrisCount">
+    <br>
     <button type="submit">Update Heading</button>
   </form>
+
+<div id="ChrisCountDisplay">CHRIS COUNT :</div>
 
   <ul id="flicks"></ul>
 
