Displays the Chris Count from the second form field

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <br>
     <br>
     <label for="ChrisCount">Chris Count</label>
-    <input type="text" name="ChrisCount">
+    <input type="number" name="ChrisCount">
     <br>
     <button type="submit">Update Heading</button>
   </form>
