Style the Page with Funky Chris Count Functionality

--- a/index.html
+++ b/index.html
@@ -8,24 +8,23 @@
   <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
 </head>
 <body>
+  <center>
   <h1>Chrismess</h1>
 
   <form id="flickForm">
       <label for="flickName">Flick Name</label>
     <input type="text" name="flickName" autofocus>
-  
-    <br>
-    <br>
+    <br> <br>
     <label for="ChrisCount">Chris Count</label>
     <input type="number" name="ChrisCount">
-    <br>
-    <button type="submit">Update Heading</button>
+    <br><br><br>
+    <button type="submit">Enter Chris Film Information!</button>
   </form>
-
+<br>
 <div id="ChrisCountDisplay">CHRIS COUNT :</div>
 
   <ul id="flicks"></ul>
-
+</center>
   <script src="index.js"></script>
 </body>
 </html>
