--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <h1>Chrismess</h1>
 
   <form id="flickForm">
-      <label for="flickName">Flick Name</label>
+      <label for="flickName">Chris Flick Name<br></label>
     <input type="text" name="flickName" autofocus>
     <br> <br>
-    <label for="ChrisCount">Chris Count</label>
+    <label for="ChrisCount">Chris Count in Said Film<br></label>
     <input type="number" name="ChrisCount">
     <br><br><br>
     <button type="submit">Enter Chris Film Information!</button>
