Minorly Affect Style changing focus color to blue

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <center>
-  <h1>Chrismess</h1>
+  <h1>ChrisMess</h1>
 
   <form id="flickForm">
       <label for="flickName">Chris Flick Name<br></label>
