Adds Chris Typhoon Feature that changes the operator on Chris Count. [need to fix bug when no items/deleteing lat item in list]

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   </form>
 <br>
 <div id="ChrisCountDisplay">CHRIS COUNT :</div>
+<div class="typhoon">
+  <button class="typhoon"> Chris Typhoon</button> 
+</div>
 
   <ul id="flicks"></ul>
 </center>
